fixed scrollbar size

--- a/assets/sass/blocks/_carousel.scss
+++ b/assets/sass/blocks/_carousel.scss
@@ -28,7 +28,7 @@
 
 .carousel {
     &::-webkit-scrollbar {
-        block-size: var(--space-2xs);
+        block-size: var(--scroll-bar-size);
     }
 
     &::-webkit-scrollbar-button {
